[package]
name = "box-korvatunturi-org"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.12.0" }
askama = "0.14.0"
bytes = "1.11.0"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
ipnet = "2.11.0"
log = "0.4.28"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "runtime-tokio",
    "sqlite",
] }
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
